  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Debug:
* libfwevt: character reference print trailing data

Recovery:
* scan for records in chunk free space

20121030
* code clean up

20121029
* worked on formatted message strings
* code clean up

20121028
* worked on formatted message strings

20121027
* worked on formatted message strings

20121025
* added examples and tests directories
* worked on user security identifier function

20121022
* worked on provider identifier support

20121021
* worked on provider identifier support
* worked on libfwevt

20121020
* worked on provider identifier support

20121019
* worked on formatted message strings
  - added support for case change in mui filename expansion
* worked on libevtx
  - added support for Binary
  - added support for UserData

20121018
* worked on formatted message strings
* bug fix in libcerror
* bug fix in libcpath
* bug fix handling %WinDir%
* worked on pyevtx

20121017
* code clean up
* worked on formatted message strings
* updated libwrc

20121016
* changed default language
* worked on pyevtx
* worked on formatted message strings

20121013
* worked on evtxexport

20121012
* worked on evtxexport

20120924
* applied updates
* libcdata update

20120919
* applied updates

20120912
* applied updates

20120819
* applied updates

20120817
* worked on python bindings
  - added iterator

20120816
* worked on python bindings

20120815
* worked on library

20120814
* worked on python bindings
* worked on tools

20120805
* applied updates

20120718
* applied updates
* added libcstring, libfwevt
* worked on libfwevt integration into libevtx
* added support for empty element tag value

20120501
* applied updates
* worked on text format export

20120430
* worked on record recovery
* worked on text format export
