@@ -61,6 +61,7 @@ Recovery:
 
 20121030
 * code clean up
+* worked on message string object
 
 20121029
 * worked on formatted message strings
